force-app/main/default/objects/Material__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>TextArea</type>
</CustomField>